carbide: css: Fix initial login url in footer
- Same color makes the url invisible

--- a/themes/carbide-2/css/style-default.css
+++ b/themes/carbide-2/css/style-default.css
@@ -187,6 +187,9 @@ footer p {
     margin: auto;
 	color: #000 !important;
 }
+footer p > a {
+    color: #fff !important;
+}
 
 /* Drop shadow without images
  * http://www.prowebdesign.ro/round-brush-like-responsive-drop-shadows-with-css3-and-no-images/ */
