--- a/themes/carbide-2/css/style-night.css
+++ b/themes/carbide-2/css/style-night.css
@@ -183,6 +183,9 @@ footer p {
     margin: auto;
 	color: #fff !important;
 }
+footer p > a {
+    color: #000 !important;
+}
 
 /* Drop shadow without images
  * http://www.prowebdesign.ro/round-brush-like-responsive-drop-shadows-with-css3-and-no-images/ */
